--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
           <configuration>
-            <testFailureIgnore>true</testFailureIgnore>
+            <testFailureIgnore>false</testFailureIgnore>
           </configuration>
         </plugin>
         <plugin>
